fixes CSS alignment, removes div offsets

--- a/Project2/AptMgmtClient/src/app/components/tenant.components/tenant-payment/tenant-payment.component.css
+++ b/Project2/AptMgmtClient/src/app/components/tenant.components/tenant-payment/tenant-payment.component.css
@@ -1,7 +1,3 @@
-html{
-    padding-left: 10px;
-    margin-left: 200px;
-}
 .row{
     padding-left: 18px;
 }
